Salesforce CPQ/main/default/objects/ErrorCondition__c/ErrorCondition__c.object-meta.xml
<CustomObject>
    <customHelpPage>ErrorConditionHelp</customHelpPage>
    <description>Error condition that causes parent Product Rule to fail.</description>
    <label>Error Condition</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>