Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/FilterValue__c.field-meta.xml
<CustomField>
    <fullName>FilterValue__c</fullName>
    <description>The value you want the tested variable to be evaluated against.</description>
    <inlineHelpText>Enter the value you want the tested variable to be evaluated against. Date value must use this format: YYYY-MM-DD 00:00:00</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>