Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Parent rule for this condition.</description>
    <inlineHelpText>Parent rule for this condition (that runs this condition).</inlineHelpText>
    <label>Rule</label>
    <referenceTo>ProductRule__c</referenceTo>
    <relationshipLabel>Error Conditions</relationshipLabel>
    <relationshipName>ErrorConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>