Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/RuleTargetsQuote__c.field-meta.xml
<CustomField>
    <fullName>RuleTargetsQuote__c</fullName>
    <formula>ISPICKVAL(Rule__r.Scope__c, &apos;Quote&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RuleTargetsQuote</label>
    <type>Checkbox</type>
</CustomField>