Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/TestedAttribute__c.field-meta.xml
<CustomField>
    <fullName>TestedAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</description>
    <inlineHelpText>Used to identify the specific attribute if the Tested Field is a global Configuration Attribute field.</inlineHelpText>
    <label>Tested Attribute</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TestedField__c</field>
            <operation>equals</operation>
            <valueField>ProductAttribute__c.Attribute__r.TargetField__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductAttribute__c</referenceTo>
    <relationshipLabel>Error Conditions</relationshipLabel>
    <relationshipName>ErrorConditions</relationshipName>
    <type>Lookup</type>
</CustomField>