Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/TestedField__c.field-meta.xml
<CustomField>
    <fullName>TestedField__c</fullName>
    <description>Field on the Quote object that should be used in testing this condition.</description>
    <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TestedObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Group Line Items</fullName>
            </value>
            <value>
                <fullName>Unit Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>