Salesforce CPQ/main/default/objects/ErrorCondition__c/fields/TestedVariable__c.field-meta.xml
<CustomField>
    <fullName>TestedVariable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Summary Variable in which this rule will be evaluated.</description>
    <inlineHelpText>Select the Summary Variable you want this rule to evaluate.</inlineHelpText>
    <label>Tested Variable</label>
    <referenceTo>SummaryVariable__c</referenceTo>
    <relationshipLabel>Error Conditions (Tested Variable)</relationshipLabel>
    <relationshipName>TestedConditions</relationshipName>
    <type>Lookup</type>
</CustomField>