Salesforce CPQ/main/default/objects/ErrorCondition__c/validationRules/FilterCombinationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FilterCombinationValidation</fullName>
    <active>true</active>
    <description>Validation for the combination of Filter Type Variable.</description>
    <errorConditionFormula>AND(ISPICKVAL(FilterType__c, &quot;Variable&quot;), ISBLANK(FilterVariable__c))</errorConditionFormula>
    <errorMessage>A Filter Type of &apos;Variable&apos; must have a Filter Variable.</errorMessage>
</ValidationRule>