Salesforce CPQ/main/default/objects/ErrorCondition__c/validationRules/Tested_attr_required_if_global_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Tested_attr_required_if_global_field</fullName>
    <active>true</active>
    <description>Tested Attribute required since the Tested Field is a global Configuration Attribute field.</description>
    <errorConditionFormula>IF(TEXT(TestedObject__c) == &apos;Configuration Attributes&apos; &amp;&amp; CONTAINS(TEXT(TestedField__c), &apos;.&apos;) &amp;&amp; TestedAttribute__c == &apos;&apos;, true, false)</errorConditionFormula>
    <errorMessage>Tested Attribute required since the Tested Field is a global Configuration Attribute field.</errorMessage>
</ValidationRule>