Salesforce CPQ/main/default/objects/ErrorCondition__c/validationRules/Tested_field_or_variable_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Tested_field_or_variable_required</fullName>
    <active>true</active>
    <description>Requires that either Tested Variable or Tested Field be specified.</description>
    <errorConditionFormula>AND(ISPICKVAL(TestedField__c,&quot;&quot;),ISBLANK(TestedVariable__c))</errorConditionFormula>
    <errorMessage>You must specify either Tested Field or Tested Variable.</errorMessage>
</ValidationRule>